# simSkel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  callbacks.xml  license.txt  makefile  plugin.cpp  plugin.h  simSkel.lua  v_repExtPluginSkeletonNG.cpp  v_repExtPluginSkeletonNG.h
sourceCode/: callbacks.xml  plugin.cpp
